5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1672_1932.log
== TEST (2019-04-28 13:13:45) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)>(p1-p3)):
	msg=("1 e 3")
elif(ab)
-- ERROR:
File "XXXX", line 12
    elif(ab)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:13:53) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)>(p1-p3)):
	msg=("1 e 3")

-- ERROR:
File "XXXX", line 12
    elif(ab)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:19:47) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)>abs(p1-p3)):
	msg=("1 e 3")
	print(msg)
elif(abs(p3-p2)<abs(p3-p1)):
	print("2 e 1")
elif(abs(p2-p1)<abs(p2-p3)):
	print("1 e 2 ")
-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:20:18) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)>abs(p1-p3)):
	msg=("1 e 3")
	print(msg)
elif(abs(p3-p2)<abs(p3-p1)):
	print("2 e 1")
elif(abs(p2-p1)<abs(p2-p3)):
	print("1 e 2 ")
-- EXECUTION TIME:
0.269732
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 13:20:41) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)>abs(p1-p3)):
	msg=("1 e 3")
	print(msg)
elif(abs(p3-p2)<abs(p3-p1)):
	print("2 e 1")
elif(abs(p2-p1)<abs(p2-p3)):
	print("1 e 2 ")

-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 13:21:10) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)>abs(p1-p3)):
	msg=("1 e 3")
	print(msg)
elif(abs(p3-p2)<abs(p3-p1)):
	print("2 e 1")
elif(abs(p2-p1)<abs(p2-p3)):
	print("1 e 2 ")

-- EXECUTION TIME:
0.166939
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:18:17) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)<=0.01):
	msg=(1, "e", 3)
	print(msg)
elif(abs(p1-p3)<=0.01):
	print(1,"e",3)
elif(abs(p2-p3)<=0.01):
	print(2,"e",3)

-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:18:19) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)<=0.01):
	msg=(1, "e", 3)
	print(msg)
elif(abs(p1-p3)<=0.01):
	print(1,"e",3)
elif(abs(p2-p3)<=0.01):
	print(2,"e",3)

-- EXECUTION TIME:
0.14941
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
(1, 'e', 3)
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:18:52) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)<=0.01):
	msg=(1, "e", 3)
	print(msg)
elif(abs(p1-p3)<=0.01):
	print(1,"e",3)
elif(abs(p2-p3)<=0.01):
	print(2,"e",3)

-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:19:20) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)<=0.01):
	msg=(1, "e", 3)
	print(msg)
elif(abs(p1-p3)<=0.01):
	print(1,"e",3)
elif(abs(p2-p3)<=0.01):
	print(2,"e",3)

-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:19:21) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)<=0.01):
	msg=(1, "e", 3)
	print(msg)
elif(abs(p1-p3)<=0.01):
	print(1,"e",3)
elif(abs(p2-p3)<=0.01):
	print(2,"e",3)

-- EXECUTION TIME:
0.122075
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
(1, 'e', 3)
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:21:13) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)<=0.01):
	print(1, "e", 2)
elif(abs(p1-p3)<=0.01):
	print(1,"e",3)
elif(abs(p2-p3)<=0.01):
	print(2,"e",3)

-- OUTPUT:
1 e 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:21:14) 
-- CODE:
x=float(input("distancia entre os olhos 1:"))
y=float(input("nariz e queixo1:"))
h=float(input("distancia entre os olhos 2:"))
i=float(input("nariz e queixo2:"))
w=float(input("distancia entre os olhos 3:"))
q=float(input("nariz e queixo3:"))
p1=(x/y)
p2=(h/i)
p3=(w/q)
if(abs(p1-p2)<=0.01):
	print(1, "e", 2)
elif(abs(p1-p3)<=0.01):
	print(1,"e",3)
elif(abs(p2-p3)<=0.01):
	print(2,"e",3)

-- EXECUTION TIME:
0.213991
-- TEST CASE 1:
---- input:
6.7
6.3
7.0
4.0
7.0
6.6
---- correct output:
1 e 3
---- user output:
1 e 3
-- TEST CASE 2:
---- input:
1.0
2.0
3.0
6.0
8.0
10.0
---- correct output:
1 e 2
---- user output:
1 e 2
-- TEST CASE 3:
---- input:
20.0
30.0
5.0
10.0
5.0
10.0
---- correct output:
2 e 3
---- user output:
2 e 3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
